--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,23 @@
 # E127,E128 under/overindent
 # E501 line too long
 # E231 missing whitespace after ':'
-# ignore = E127,E128,E401,E501
-#ignore = E231
-# no docstrings
-# http://pep257.readthedocs.io/en/latest/error_codes.html 
-# E501 max line length
-# W391 blank line at EOF
-ignore = D103,D100,D101,D102,D401,D105,E501,W391
-exclude = .git,
-	__pycache__,
-	venv/,
+select = B,C,E,F,W,T4,B9
+# ignore = E127,E128,E401,E203,W503,E731,E501
+ignore =
+    # whitespace before ':' - doesn't work well with black
+    E203
+    # module level import not at top of file
+    E402
+    # line too long - let black worry about that
+    E501
+    # do not assign a lambda expression, use a def
+    E731
+    # line break before binary operator
+    W503
+exclude = 
+    .git
+    __pycache__
 
-max-complexity = 15
-max-line-length = 100
+
+max-complexity = 18
+max-line-length = 110
