use join for creating paths

--- a/.pylintrc
+++ b/.pylintrc
@@ -153,13 +153,13 @@ confidence=
 # unused-variable: because of for _,_,f,_ in some_iter() looks stupid
 # bad-continuation: because black takes care of that
 # no-self-use: because of inheritance
+#        import-outside-toplevel
+#        no-else-return,
+#        no-self-use,
+#        too-few-public-methods,
 disable=missing-docstring,
         unused-argument,
-        no-else-return,
-        no-self-use,
-        too-few-public-methods,
-        invalid-name,
-        import-outside-toplevel
+        invalid-name
         
 
 # Enable the message, report, category or checker with the given id(s). You can
@@ -232,7 +232,7 @@ ignore-none=yes
 # some branches might not be evaluated, which results in partial inference. In
 # that case, it might be useful to still emit no-member and other checks for
 # the rest of the inferred objects.
-ignore-on-opaque-inference=yes
+ignore-on-opaque-inference=no
 
 # List of class names for which member attributes should not be checked (useful
 # for classes with dynamically set attributes). This supports the use of
