--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,39 +1,62 @@
-# https://pre-commit.com/
 repos:
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
     hooks:
-    - id: seed-isort-config
-  # isort should run before black as black sometimes tweaks the isort output
-  - repo: https://github.com/timothycrosley/isort
-    rev: 4.3.21-2
-    hooks:
-      - id: isort
-        files: .+\.py$
-  # https://github.com/python/black#version-control-integration
-  - repo: https://github.com/python/black
-    rev: stable
-    hooks:
-      - id: black
- # - repo: local
- #   hooks:
- #     - id: pylint
- #       name: pylint
- #       entry: pylint
- #       language: system
- #       types: [python]
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-docstring-first
+      # -   id: check-json
+      # -   id: check-yaml
+      - id: debug-statements
+    # -   id: name-tests-test
+    # -   id: requirements-txt-fixer
+    # -   id: double-quote-string-fixer
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
     hooks:
       - id: flake8
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #  rev: v0.761  # Must match ci/requirements/*.yml
-  #  hooks:
-  #    - id: mypy
+        additional_dependencies: [flake8-typing-imports==1.12.0]
+  # -   repo: https://github.com/pre-commit/mirrors-autopep8
+  #     rev: v1.6.0
+  #     hooks:
+  #     -   id: autopep8
+  # -   repo: https://github.com/pre-commit/pre-commit
+  #     rev: v2.17.0
+  #     hooks:
+  #     -   id: validate_manifest
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.2.0
+    rev: v3.19.0
     hooks:
       - id: pyupgrade
-        args:
-          - "--py3-only"
-          - "--py37-plus"
+        args: [--py37-plus]
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.14.0
+    hooks:
+      - id: reorder-python-imports
+        args: [--py37-plus, --add-import, "from __future__ import annotations"]
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v3.1.0
+    hooks:
+      - id: add-trailing-comma
+        args: [--py36-plus]
+    # https://github.com/python/black#version-control-integration
+  - repo: https://github.com/python/black
+    rev: 24.10.0
+    hooks:
+      - id: black
+  # -   repo: https://github.com/asottile/setup-cfg-fmt
+  #     rev: v1.20.0
+  #     hooks:
+  #     -   id: setup-cfg-fmt
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          [types-requests]
+        #   [types-matplotlib, types-pandas, types-scipy, types-sqlalchemy]
+        # exclude: ^testing/resources/
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
