--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ selenium = "^4.27.1"
 tabulate = "^0.9.0"
 
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.14.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
