--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ lxml = "^5.4.0"
 beautifulsoup4 = "^4.13.0"
 selenium = "^4.32.0"
 tabulate = "^0.9.0"
+html-to-markdown = "^1.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
