--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,29 @@
-[tool.poetry]
+[project]
 name = "scifeeder"
 version = "0.1.1"
 description = ""
-authors = ["arabidopsis <ian.castleden@gmail.com>"]
+authors = [{ name = "arabidopsis", email = "ian.castleden@gmail.com" }]
+requires-python = "~=3.11"
 readme = "README.md"
+dependencies = [
+    "click>=8.1.8,<9",
+    "requests>=2.32.4,<3",
+    "lxml>=5.4.0,<6",
+    "beautifulsoup4>=4.13.0,<5",
+    "html-to-markdown>=1.3.2,<2",
+    "tqdm>=4.67.1,<5",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-# jinja2 = "^3.1.6"
-click = "^8.1.8"
-requests = "^2.32.4"
-lxml = "^5.4.0"
-beautifulsoup4 = "^4.13.0"
-html-to-markdown = "^1.3.2"
-tqdm = "^4.67.1"
+[project.optional-dependencies]
+all = [
+    "selenium>=4.32.0,<5",
+    "undetected-chromedriver>=3.5.5,<4",
+    "selenium-stealth>=1.0.6,<2",
+]
 
-selenium = { version = "^4.32.0", optional = true }
-undetected-chromedriver = { version = "^3.5.5", optional = true }
-selenium-stealth  = { version = "^1.0.6", optional = true }
-
-[tool.poetry.extras]
-all = ["selenium", "undetected-chromedriver", "selenium-stealth"]
-
-[tool.poetry.scripts]
+[project.scripts]
 scifeeder = "scifeeder.__main__:cli"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
